# plume-vm

./: .gitignore  .gitmodules  CMakeLists.txt  gc.c  log.c  xmake.lua
include/: bytecode.h  callstack.h  deserializer.h  interpreter.h  module.h  stack.h  value.h
include/core/: debug.h  dll.h  error.h  gc.h  library.h  log.h
src/: callstack.c  deserializer.c  interpreter.c  main.c  stack.c  value.c
src/core/: gc.c  library.c  log.c
standard/: math.c  string.c
